--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         These languages are the backbone of every website, defining structure, content, and presentation.
       </p>
       <div class="author-div">
-        <img class="author-img" src="/assets/images/image-avatar.webp" alt="">
+        <img class="author-img" src="./assets/images/image-avatar.webp" alt="">
         <span class="author-name">
           Greg Hooper
         </span>
